# taut

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
.github/workflows/: publish.yml
corpus/: ext_vectors.json  float_vectors.json  glade.golden.json  glade.ir.json  glade_folds.json  glade_hashes.json  griplab.golden.json  griplab.ir.json  resext.ir.json  residual_vectors.json
corpus/parity/: allowlist.json  gen_vectors.py  int.vectors.json  malformed.vectors.json
dev-docs/: CodeShape.md  GripLabSurfaceCatalog.md  Phase0Discovery.md  PrismCrdt.md  PrismDecisions.md  PrismDistribution.md  PrismModules.md  PrismOrchestration.md  PrismPlan.md  RustFailClosed.md  TautCodecParityPlan-Review25-2.md  TautCodecParityPlan-Review25.md  TautCodecParityPlan-Review55-2.md  TautCodecParityPlan-Review55.md  TautCodecParityPlan.md  TautCrdt.md  TautDecisions.md  TautDistribution.md  TautFload2-Cpp-CodeReview55.md  TautFload2-Js-CodeReview55.md  TautFload2-Kotlin-CodeReview48.md  TautFload2-Ts-CodeReview48.md  TautFloat2-Cpp-ResponsePlan.md  TautFloat2-Kotlin-ResponsePlan.md  TautFloat2-Rust-ResponsePlan.md  TautFloat2-Ts-ResponsePlan.md  TautFloatP2-Base.md  TautFloatP2-Cpp.md  TautFloatP2-Go.md  TautFloatP2-Java.md  TautFloatP2-Js.md  TautFloatP2-Kotlin.md  TautFloatP2-Ts.md  TautFloatPlan.md  TautModules.md  TautOrchestration.md  TautPlan.md  TautProtoApiSurfaceExtensions.md  TautResExtP2-Base.md  TautResExtP2-Cpp-Review55-2.md  (+41 more)
dev-docs/history/: TautFload2-Cpp-CodeReview48.md  TautFload2-Go-CodeReview48.md  TautFload2-Go-CodeReview55.md  TautFload2-Java-CodeReview48.md  TautFload2-Java-CodeReview55.md  TautFload2-Js-CodeReview48.md  TautFload2-Kotlin-CodeReview55.md  TautFload2-Rust-CodeReview48.md  TautFload2-Rust-CodeReview55.md  TautFload2-Swift-CodeReview48.md  TautFload2-Swift-CodeReview55.md  TautFload2-Ts-CodeReview55.md  TautFloat2-Go-ResponsePlan.md  TautFloat2-Java-ResponsePlan.md  TautFloat2-Js-ResponsePlan.md  TautFloat2-Swift-ResponsePlan.md  TautFloatP2-Rust.md  TautFloatP2-Swift.md
docs/: CPP_API.md  GO_API.md  GettingStarted.md  JAVA_API.md  JS_API.md  KOTLIN_API.md  Overview.md  PYTHON_API.md  README.md  RUST_API.md  Reference.md  SWIFT_API.md  Server.md  TYPESCRIPT_API.md
docs/examples/tasks/: README.md  generate.py  run.py  tasks.ir.json  tasks.prism.py  tasks.taut.py
ir/: README.md  glade.taut.py  griplab.prism.py  griplab.taut.py  parity_int.taut.py  razel.taut.py  resext.taut.py
scripts/: name_scan.py  release.py
src/: README.md  pyproject.toml
src/prism/: ext.py
src/prism/corpus/: build.py
src/prism/crdt/: engine.py
src/prism/ir/: compat.py  dsl.py  export.py  load.py  model.py  shapes.py  validate.py
src/prism/wire/: cbor.py  codec.py
src/taut/: _version.py  cli.py  ext.py
src/taut/corpus/: build.py  float_build.py  glade_build.py  kit.py  parity.py  resext_build.py  synth.py
src/taut/crdt/: __init__.py  glade_chain.py  glade_fold.py
src/taut/ir/: compat.py  dsl.py  export.py  load.py  model.py  shapes.py  validate.py
src/taut/wire/: cbor.py  codec.py  jsoncodec.py
src/tests/: js_float_parity.js  kotlin_float_parity.kt  test_cbor.py  test_cli.py  test_compat.py  test_corpus.py  test_corpus_kit.py  test_cpp.py  test_crdt.py  test_dev_docs.py  test_dsl.py  test_float.py  test_float_vectors.py  test_forward_compat.py  test_glade_chain.py  test_glade_corpus.py  test_glade_folds.py  test_go.py  test_java.py  test_js.py  test_jsoncodec.py  test_kotlin.py  test_map.py  test_map_gen.py  test_parity.py  test_project_metadata.py  test_python_parity.py  test_razel.py  test_readme.py  test_regen.py  test_reserved.py  test_resext_vectors.py  test_rust.py  test_scaffold.py  test_swift.py  test_ts.py  test_validate.py
src/tests/java/: FloatParity.java
