# Distribution name is `taut-proto` (PyPI rejects `taut` as "isn't allowed").
# Import name stays `taut`:  pip install taut-proto  ->  import taut  ->  CLI `taut`.
[project]
name = "taut-proto"
version = "0.1.0"
description = "taut — one declarative IR -> native types, deterministic CBOR wire, IR-driven codec + service contracts, verified by a golden conformance corpus (import: `taut`)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gianni Mariani", email = "gianni@mariani.ws" }]
keywords = ["idl", "protocol", "schema", "serialization", "cbor", "rpc", "contract"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = []   # stdlib only (hand-rolled deterministic CBOR; no runtime deps)

[project.urls]
Homepage = "https://github.com/owebeeone/taut"
Repository = "https://github.com/owebeeone/taut"

[project.scripts]
tautc = "taut.cli:main"   # codegen CLI: `tautc gen IR --out DIR [--lang ...]`

[build-system]
requires = ["setuptools>=77"]   # PEP 639 SPDX license expression support
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["taut*"]

[tool.setuptools.package-data]
# vendored per-language CBOR runtimes emitted by `tautc gen --with-runtime`
"taut.gen.runtime" = ["*.rs", "*.hpp", "*.swift", "*.go", "*.kt", "*.js", "*.java"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
