[project]
name = "prism"
version = "0.0.0"
description = "Prism builder — IR model, deterministic CBOR wire, IR-driven codec, golden corpus"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
